--- a/contacts-app/package.json
+++ b/contacts-app/package.json
@@ -14,11 +14,13 @@
     "@vee-validate/i18n": "^4.13.2",
     "@vee-validate/rules": "^4.13.2",
     "@vueuse/core": "^11.0.3",
+    "dotenv": "^16.4.5",
     "nuxt": "^3.13.0",
     "pinia": "^2.2.2",
     "pinia-plugin-persistedstate": "^4.0.0",
     "vee-validate": "^4.13.2",
     "vue": "latest",
+    "vue-google-autocomplete": "^1.1.4",
     "vue-router": "latest",
     "yup": "^1.4.0"
   },
